<resources>
    <string name="app_name">MHB User</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Marriage Hall Booking</string>
    <string name="nav_header_subtitle">User Name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_filter">Filter?</string>
    <string name="menu_favourite">Favourite</string>
    <string name="menu_request">Request</string>
    <string name="menu_history">History</string>
    <string name="menu_logout">LogOut</string>
    <string name="menu_aboutus">AboutUS</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_share">Share?</string>
    <string name="menu_exit">Exit</string>
    <string name="title_activity_show_detail">ShowDetail</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_send">Send</string>
    <string name="title">Title</string>
    <string name="HallName">Hall Name</string>
    <string name="price">Per Haed</string>
    <string name="Location">Loaction</string>
    <string name="PhoneNo">Phone No:</string>
</resources>
