<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_filter"
            android:icon="@drawable/ic_menu_filter"
            android:title="@string/menu_filter" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_menu_favourite"
            android:title="@string/menu_favourite" />
        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/ic_menu_request"
            android:title="@string/menu_request" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_aboutus"
                android:icon="@drawable/ic_menu_aboutus"
                android:title="@string/menu_aboutus" />
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_menu_profile"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_exit"
                android:title="@string/menu_exit" />
        </menu>
    </item>

</menu>
